# blinky

./: CMakeCache.txt  CMakeLists.txt  DEBUG_README.md  USB_FLASH_GUIDE.md  blinky.code-workspace  build.sh  connect-rtt.cfg  connect-rtt.sh  flash-application.sh  flash-swd.sh  flash-usb.sh  flash.sh  jlink-rtt-console.sh  monitor-swd.sh  openocd-pico-nrf52.cfg  prj.conf  rtt-console-simple.sh  rtt-console.cfg  rtt-console.sh  rtt-debug.sh  rtt-session.cfg  rtt_debug.cfg  setup-env.sh  simple-flash.cfg  simple-flash.sh  start-rtt-server.sh  sysbuild.conf  trigger-dfu.sh  usb-console.sh  west.yml  zshrc-snippet.txt
boards/: xiao_ble.cmake  xiao_ble.overlay  xiao_ble_mcuboot.overlay
child_image/: mcuboot.conf
client/: stream_client.py
src/: main.c
sysbuild/: mcuboot-rsa-key.pem  mcuboot.conf
